--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body>
   <label>do you want music?</label>
         <input type="checkbox" id="cena" onchange="myfunction();"/>
+        
     <script>
     var audio = new Audio('ping1.mp3'),
         cenaCheckbox = document.getElementById('cena'),
@@ -13,6 +14,7 @@
         </body>
     </label>
     <title> bitcoin tracker</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <p>
         <label>i will alert you when the maket</label> 
         <select id="riseorfall" name="cars" onchange="scr=riseorfall.js">
@@ -33,6 +35,8 @@ function changeOrg(){
   console.log(localStorage.rof)}
 changeOrg(); 
 </script>
+<canvas id="chart"></canvas>
+
     <a href="https://www.coindesk.com/price/bitcoin">Powered by CoinDesk </a>
     <div id="data">
 	<script type="text/javascript">
@@ -43,7 +47,8 @@ changeOrg();
 				var json = JSON.parse(this.responseText);
 				parseJson(json)}}; 
 		xmlhttp.open("GET", url, true);
-		xmlhttp.send();	
+		xmlhttp.send();
+    var lastRate = null;	
 		function parseJson(json) {
             function relode() {
        xmlhttp.onreadystatechange = function() {
@@ -54,14 +59,48 @@ changeOrg();
        xmlhttp.send();
        function parseJson(json) {
          var time = "<b>Last Updated : " + json["time"]["updated"] + "</b>";
-         var audValue = "1 BTC equals to aud$;" + json["bpi"]["AUD"]["rate"];
+         var audValue = "1 BTC equals to aud$ " + json["bpi"]["AUD"]["rate"];
+         var currentRate = json["bpi"]["AUD"]["rate"];
+         lastRate = currentRate;
+         var chart = new Chart(document.getElementById('chart'), {
+  type: 'line',
+  data: {
+    labels: [],
+    datasets: [{
+      label: 'Bitcoin rate',
+      data: [],
+      borderColor: 'blue',
+      fill: false
+    }]
+  },
+  options: {
+    scales: {
+      xAxes: [{
+        ticks: {
+          autoSkip: true,
+          maxTicksLimit: 20
+        }
+      }]
+    }
+  }
+});
+
+function updateChart() {
+  var currentTime = new Date().toLocaleTimeString();
+  chart.data.labels.push(currentTime);
+  chart.data.datasets[0].data.push(lastRate);
+  chart.update();
+}
+
+setInterval(updateChart, 1000);
+
          document.getElementById("data").innerHTML =
            time + "<br />" + audValue;
                    audvalue = ""+ json["bpi"]["AUD"]["rate"]}
       console.log("done")}    
       setInterval(relode, 60000)
 			var time = "<b>Last Updated : " + json["time"]["updated"] + "</b>";
-			var audValue = "1 BTC equals to aud$;" + json["bpi"]["AUD"]["rate"];
+			var audValue = "1 BTC equals to aud$ " + json["bpi"]["AUD"]["rate"];
 			document.getElementById("data").innerHTML =
 				time + "<br />" + audValue;
                 audvalue = ""+ json["bpi"]["AUD"]["rate"];
